# django-vincent-beginners-pages

./: Makefile  README.md  pyproject.toml  requirements.txt
pages/: tests.py
project/: settings.py
templates/: about.html  home.html
