[tool.poetry]
name = "dj-vincent-pages"
version = "0.1.0"
description = ""
authors = ["zachvalenta <zjv5002@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.4"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
