[tool.poetry]
name = "django-vincent-beginners-pages"
version = "0.1.0"
description = ""
authors = ["zachvalenta <zjv5002@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.2.25"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
